--- a/doggo.css
+++ b/doggo.css
@@ -9,7 +9,7 @@
   float: right;
   display: block;
   color: #f2f2f2;
-  text-align: left;
+  text-align: right;
   padding: 14px;
   text-decoration: none;
 }
@@ -42,46 +42,5 @@
 .p
 {
   font-style:'Garamound';
-}
-
-
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-}
-.navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px;
-  text-decoration: none;
-}
-
-.content {
-  padding: 16px;
-}
-
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-.sticky + .content {
-  padding-top: 60px;
-}
-
-.column {
-  float: left;
-  width: 20%;
-  padding: 3px;
-}
-
-/* Clear floats after image containers */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
 }
 
