--- a/doggo.css
+++ b/doggo.css
@@ -43,8 +43,10 @@
 {
   font-style:'Garamound';
 }
-*
-{
-  box-sizing: border-box;
-}
 
+@media only screen and (max-width: 620px) {
+  /* For mobile phones: */
+  .row {
+    width: 100%;
+  }
+}
